# app/model/todo.go
@@ -3,6 +3,7 @@ package model
 import "go.mongodb.org/mongo-driver/bson/primitive"
 
 type ToDo struct {
-	Id   primitive.ObjectID `bson:"_id" json:"id"`
-	Name string             `bson:"name" json:"name"`
+	Id       primitive.ObjectID `bson:"_id" json:"id"`
+	Name     string             `bson:"name" json:"name"`
+	Username string             `bson:"username" json:"username"`
 }
