# docs/swagger.yaml
@@ -1,5 +1,30 @@
 basePath: /api/v1
 definitions:
+  form.ToDoForm:
+    properties:
+      name:
+        type: string
+      username:
+        type: string
+    required:
+    - name
+    - username
+    type: object
+  form.ToDoResp:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+      roles:
+        items:
+          type: string
+        type: array
+      username:
+        type: string
+    type: object
   model.User:
     properties:
       id:
@@ -27,6 +52,85 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
+  /todos:
+    get:
+      consumes:
+      - application/json
+      description: Get all Todotask
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/form.ToDoResp'
+            type: array
+      security:
+      - ApiKeyAuth: []
+      summary: Get all Todotask
+    post:
+      consumes:
+      - application/json
+      description: Create Todotask
+      parameters:
+      - description: ToDoForm
+        in: body
+        name: todoForm
+        required: true
+        schema:
+          $ref: '#/definitions/form.ToDoForm'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/form.ToDoResp'
+      summary: Create Todotask
+  /todos/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get Todotask by id
+      parameters:
+      - description: ToDotask ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/form.ToDoResp'
+      summary: Get Todotask by id
+    put:
+      consumes:
+      - application/json
+      description: Update Todotask
+      parameters:
+      - description: ToDoForm
+        in: body
+        name: todoForm
+        required: true
+        schema:
+          $ref: '#/definitions/form.ToDoForm'
+      - description: ToDotask ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/form.ToDoResp'
+      summary: Update Todotask
   /user:
     get:
       consumes:
